# Custom-MCP

./: .gitignore  README.md  clipboard_mcp.py  file_mcp.py  master_router.py  pyproject.toml  python_sandbox_mcp.py  reminder_mcp.py  requirements.txt  screenshot_mcp.py  search_mcp.py  sri_news_mcp.py  syntiox_mcp_cli.py  system_mcp.py  weather_mcp.py
google/: auth_setup.py  calendar_handlers.py  docs_handlers.py  drive_handlers.py  forms_handlers.py  gmail_handlers.py  google_common.py  google_news_handlers.py  sheets_handlers.py  slides_handlers.py  tasks_handlers.py
syntiox_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
